--- a/jungle.html
+++ b/jungle.html
@@ -5,7 +5,6 @@
 	<title>Do Shou Qi</title>
 	<style>
 canvas {
-	border: 10px dashed black;
 }
 	</style>
 	<script>
@@ -17,26 +16,24 @@ window.onload = function() {
 	canvas.onmouseup = canvasClick;
 	
 	context.fillStyle = "blue";
-	context.fillRect(100, 300, 200, 300);
-	context.fillRect(400, 300, 200, 300);
+	water = [[3,1],[4,1],[5,1],[3,2],[4,2],[5,2],[3,4],[4,4],[5,4],[3,5],[4,5],[5,5]]
 	context.lineWidth = 4;
 	context.strokeStyle = "rgb(60,60,60)";
-	for (row=0; row<8; row++) {
-		for (column=0; column<10; column++) {
-			x = row*100
-			y = column*100
+	for (col=0; col<8; col++) {
+		for (row=0; row<10; row++) {
+			x = col*100
+			y = row*100
 			context.moveTo(x,y)
 			context.lineTo(x+100,y)
-			context.stroke();
-			context.moveTo(x,y)
+			context.lineTo(x+100,y+100)
 			context.lineTo(x,y+100)
+			context.lineTo(x,y)
 			context.stroke();
-			context.moveTo(x+100,y)
-			context.lineTo(x+100,y+100)
-			context.stroke();
-			context.moveTo(x,y+100)
-			context.lineTo(x+100,y+100)
-			context.stroke();
+			for (w_i = 0; w_i < water.length; w_i++) {
+				if ((water[w_i][0] == row) && (water[w_i][1] == col)) {
+					context.fillRect(x,y,100,100)
+				}
+			}
 		}
 	}
 }
