--- a/jungle.html
+++ b/jungle.html
@@ -15,8 +15,9 @@ window.onload = function() {
 	
 	canvas.onmouseup = canvasClick;
 	
-	context.fillStyle = "blue";
 	water = [[3,1],[4,1],[5,1],[3,2],[4,2],[5,2],[3,4],[4,4],[5,4],[3,5],[4,5],[5,5]]
+	traps = [[7,3],[8,2],[8,4],[0,2],[1,3],[0,4]]
+	den = [[0,3],[8,3]]
 	context.lineWidth = 4;
 	context.strokeStyle = "rgb(60,60,60)";
 	for (col=0; col<8; col++) {
@@ -31,6 +32,19 @@ window.onload = function() {
 			context.stroke();
 			for (w_i = 0; w_i < water.length; w_i++) {
 				if ((water[w_i][0] == row) && (water[w_i][1] == col)) {
+					context.fillStyle = "blue";
+					context.fillRect(x,y,100,100)
+		 		}
+	 		}
+			for (t_i = 0; t_i < traps.length; t_i++) {
+				if ((traps[t_i][0] == row) && (traps[t_i][1] == col)) {
+					context.fillStyle = "gray";
+					context.fillRect(x,y,100,100)
+				}
+			}
+			for (d_i = 0; d_i < den.length; d_i++) {
+				if ((den[d_i][0] == row) && (den[d_i][1] == col)) {
+					context.fillStyle = "red";
 					context.fillRect(x,y,100,100)
 				}
 			}
