--- a/jungle.html
+++ b/jungle.html
@@ -80,33 +80,67 @@ window.onload = function() {
 					context.fillRect(x,y,100,100)
 				}
 			}
-			console.log("pieces.length = " + Object.keys(pieces).length)
-			for (p_i = 0; p_i < Object.keys(pieces).length; p_i++) {
-				key = row + "_" + col
-				console.log(key)
-				if (key in pieces) {
-					player = pieces[key]["player"]
-					animal = pieces[key]["animal"]
-					if (player == 0) {
-						context.drawImage(animals_0[animal], x, y, 100, 100);
-					}
-					if (player == 1) {
-						context.drawImage(animals_1[animal], x, y, 100, 100);
-					}
-				}
-			}
+		}
+	}
+	console.log("pieces.length = " + Object.keys(pieces).length)
+	pieces_position_list = Object.keys(pieces)
+	for (p_i = 0; p_i < pieces_position_list.length; p_i++) {
+		piece_position = pieces_position_list[p_i]
+		player = pieces[piece_position]["player"]
+		animal = pieces[piece_position]["animal"]
+		console.log("piece_position " + piece_position + ", player " + player)
+		piece_components = piece_position.split("_")
+		x = piece_components[1]*100
+		y = piece_components[0]*100
+		if (player == 0) {
+			context.drawImage(animals_0[animal], x, y, 100, 100);
+		}
+		if (player == 1) {
+			context.drawImage(animals_1[animal], x, y, 100, 100);
 		}
 	}
 }
 
+var is_first_click = true
+first_click_key = "0_0"
+
+
 function canvasClick(e) {
-	var canvas = document.getElementById("drawingCanvas");
-	var context = canvas.getContext("2d");
-	var clickX = e.pageX - canvas.offsetLeft;
-	var clickY = e.pageY - canvas.offsetTop;
-	var column = Math.floor(clickX/100)
-	var row = Math.floor(clickY/100)
-	console.log("column: " + column + ", row: " + row) 
+	canvas = document.getElementById("drawingCanvas");
+	context = canvas.getContext("2d");
+	clickX = e.pageX - canvas.offsetLeft;
+	clickY = e.pageY - canvas.offsetTop;
+	column = Math.floor(clickX/100)
+	row = Math.floor(clickY/100)
+	click_key = column + "_" + row
+	if (is_first_click == true) {
+		console.log("first_click true")
+		if (pieces[click_key] == null) {
+			console.log("no piece ; will return")
+			return
+		}
+		first_click_key = click_key
+		is_first_click = false
+	}
+	else {
+		second_click_key = click_key
+		console.log("first_click false")
+		console.log("click_key " + click_key)
+		if (pieces[second_click_key] != null) {
+			console.log("second square occupied")
+		}
+		console.log("first_click_key " + first_click_key)
+		console.log("pieces [before deletion] " + JSON.stringify(pieces))
+		var moving_piece = pieces[first_click_key]
+		console.log("moving_piece " + moving_piece)
+		console.log("second_click_key " + second_click_key)
+		delete pieces[first_click_key]
+		console.log("pieces [after deletion] " + JSON.stringify(pieces))
+		console.log("will replace pieces")
+		pieces[click_key] = moving_piece;
+		is_first_click = true
+		console.log("pieces [after replacement] " + JSON.stringify(pieces))
+	}
 };
 
 	</script>
