--- a/siddhartha/jungle/jungle.html
+++ b/siddhartha/jungle/jungle.html
@@ -5,6 +5,7 @@
 	<title>Dou Shou Qi</title>
 	<script src="rules.js"></script>
 	<script src="jungle.js"></script>
+	<script src="info.js"></script>
 </head>
 
 <body>
