--- a/siddhartha/jungle/jungle.html
+++ b/siddhartha/jungle/jungle.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Dou Shou Qi</title>
+	<p id="multiplayer_join_url"></p>
 	<script src="jungle.js"></script>
 	<script src="info.js"></script>
 </head>
