--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-<a href="biswas.net/siddhartha/jungle/jungle.html">link text</a>
-=======
-http://biswas.net/siddhartha/jungle/jungle.html
->>>>>>> 50bba2ea951b67496787e0af3de19983692c727f
+<a href="biswas.net/siddhartha/jungle/jungle.html">Jungle Chess</a>
