--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="siddhartha/jungle/jungle.html">Jungle Chess</a>
+<a href="siddhartha/jungle/jungle.html">Come play this totally amazing game made by a certifiable genius who goes by the name of Siddhartha the Great</a>
