--- a/siddhartha/jungle/jungle.html
+++ b/siddhartha/jungle/jungle.html
@@ -12,5 +12,10 @@
 <body>
 	<canvas id="drawingCanvas" width="1800"
 	 height="1400"></canvas>
+	<meta name="viewport" content="width=1280, initial-scale=1">
+	var siteWidth = 1280;
+	var scale = screen.width /siteWidth;
+
+	document.querySelector('meta[name="viewport"]').setAttribute('content', 'width='+siteWidth+', initial-scale='+scale+'');
 </body>
 </html>
