--- a/rahul/textarea.html
+++ b/rahul/textarea.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Five Pages</title>
+  <title>Text Area</title>
 <style>
 label {
   display: inline-block;
@@ -15,15 +15,7 @@ function SwitchText(page) {
 }
 </script>
 </head>
-<body onload="SwitchText(0);">
-  <h1>Five Pages</h1>
-  <p><output id="result"></output></p>
-  <form action="#" id="whatevs">
-    <input type="button" name="0" value="0" onclick="SwitchText(0)" /></p>
-    <input type="button" name="1" value="1" onclick="SwitchText(1)" /></p>
-    <input type="button" name="2" value="2" onclick="SwitchText(2)" /></p>
-    <input type="button" name="3" value="3" onclick="SwitchText(3)" /></p>
-    <input type="button" name="4" value="4" onclick="SwitchText(4)" /></p>
-  </form>
+<body>
+  <textarea rows="4" cols="50">
 </body>
 </html>
