--- a/rahul/textarea.html
+++ b/rahul/textarea.html
@@ -16,6 +16,6 @@ function SwitchText(page) {
 </script>
 </head>
 <body>
-  <textarea rows="4" cols="50">
+  <textarea rows="4" cols="50"></textarea>
 </body>
 </html>
