--- a/rahul/textarea.html
+++ b/rahul/textarea.html
@@ -18,6 +18,6 @@ function rmtext(page) {
 </script>
 </head>
 <body>
-  <textarea id="ta" name="ta" rows="4" cols="35" oninput="rmtext()"></textarea>
+  <textarea id="ta" name="ta" rows="6" cols="35" oninput="rmtext()" autofocus></textarea>
 </body>
 </html>
