--- a/rahul/textarea.html
+++ b/rahul/textarea.html
@@ -20,6 +20,9 @@ function rmtext(page) {
 	if (ta.value.length > 120) {
   	ta.value = ta.value.substring(1)
   }
+  if (ta.includes("xxx")) {
+    ta.value = ""
+  }
 }
 function cleartext() {
 	var ta = document.getElementById('ta')
@@ -31,6 +34,6 @@ function cleartext() {
   <textarea id="ta" name="ta" rows="15" cols="35" oninput="rmtext()" autofocus></textarea>
 	<br>
 	<button class="button" onclick="cleartext()">clear</button>
-1	
+2
 </body>
 </html>
