--- a/rahul/textarea.html
+++ b/rahul/textarea.html
@@ -20,7 +20,7 @@ function rmtext(page) {
 	if (ta.value.length > 120) {
   	ta.value = ta.value.substring(1)
   }
-  if (ta.includes("xxx")) {
+  if (ta.value.includes("xxx")) {
     ta.value = ""
   }
 }
@@ -34,6 +34,7 @@ function cleartext() {
   <textarea id="ta" name="ta" rows="15" cols="35" oninput="rmtext()" autofocus></textarea>
 	<br>
 	<button class="button" onclick="cleartext()">clear</button>
-2
+<br>	
+3
 </body>
 </html>
